<resources>
    <string name="app_name">AssApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_game">CREATE GAME</string>
    <string name="join_game">JOIN GAME</string>
    <string name="next">NEXT</string>
    <string name="associoholic">Associoholic</string>
    <string name="set_timer">Set timer:</string>
    <string name="rounds_number">Rounds number:</string>
    <string name="words_number">Words number:</string>
    <string name="return_">return</string>
    <string name="your_name_goes_here">Your name goes here</string>
    <string name="start_game">START GAME</string>
</resources>
