<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="associoholic.com.client.AssFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:text="@string/hello_blank_fragment"
        android:layout_margin="50dp"
        android:background="@color/colorPrimary"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_game"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/join_button"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/join_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_game"
                app:layout_constraintTop_toBottomOf="@id/create_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/associoholic"
        android:textSize="32sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
