<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <include layout="@layout/item_return_button"
        android:id="@+id/return_button" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_margin="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/hello_blank_fragment"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/label_timer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/set_timer"
                app:layout_constraintBottom_toTopOf="@id/label_rounds"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/label_rounds"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rounds_number"
                app:layout_constraintBottom_toTopOf="@id/label_words"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_timer" />

            <TextView
                android:id="@+id/label_words"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/words_number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_rounds" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/timer_layout"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                app:errorEnabled="false"
                app:hintEnabled="false"
                android:padding="0dp"
                app:layout_constraintBottom_toBottomOf="@id/label_timer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/label_timer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/timer_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="3"
                    android:textAlignment="center"
                    tools:text="913"
                    android:padding="0dp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:inputType="number">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rounds_layout"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                app:errorEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintBottom_toBottomOf="@id/label_rounds"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/label_rounds">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rounds_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="2"
                    tools:text="91"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:inputType="number">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/words_layout"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                app:errorEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintBottom_toBottomOf="@id/label_words"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/label_words">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/words_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="2"
                    tools:text="91"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:inputType="number">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        android:layout_marginTop="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:hint="@string/your_name_goes_here"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorAccent"
            android:textStyle="bold">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/next"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view">

        <TextView
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/ic_right_white_24dp"
            android:fontFamily="casual"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold|italic" />

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>
